# flock-twitter-ai-verified

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: .gitkeep  547defd134b7_create_users_table.py  b8f3a2c91d47_create_tweets_table.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: __init__.py  auth.py  users.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: __init__.py  tweet.py  user.py
app/repositories/: __init__.py  tweet.py  user.py
app/schemas/: __init__.py  auth.py  tweet.py  user.py
app/services/: __init__.py  auth.py  tweet.py
rules/: projec-rules.md.txt
tests/: conftest.py
