[project]
name = "flock-twitter-ai-verified-backend"
version = "0.1.0"
description = "FastAPI backend for a Twitter clone."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "fastapi[standard]>=0.115.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.6.0",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy[asyncio]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "rules*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
